--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cali.so",
-  "version": "0.1.0",
+  "name": "xufei.site",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "build": "next build",
