--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "buildCommand": "pnpm turbo build",
+
+  "installCommand": "pnpm install",
+  "framework": "nextjs",
+  
   "github": {
     "silent": true
   }
