--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mdx-js/loader": "^2.3.0",
     "@neondatabase/serverless": "^0.9.0",
+    "@phosphor-icons/react": "^2.1.7",
     "@portabletext/react": "^3.0.11",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-hover-card": "^1.0.7",
