--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "edge-cors": "^0.2.1",
     "framer-motion": "^10.12.17",
     "hashids": "^2.3.0",
+    "install": "^0.13.0",
     "next": "^14.1.3",
     "next-sanity": "^8.3.2",
     "next-themes": "^0.2.1",
@@ -69,6 +70,7 @@
     "react-markdown": "^8.0.7",
     "react-query": "^3.39.3",
     "react-rewards": "^2.0.4",
+    "react-slick": "^0.30.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
     "react-tweet": "^3.2.0",
@@ -79,6 +81,7 @@
     "rss": "^1.2.2",
     "sanity": "^3.33.0",
     "sanity-plugin-media": "^2.2.5",
+    "slick-carousel": "^1.8.1",
     "valtio": "^1.13.2",
     "zod": "^3.22.4"
   },
