--- a/package.json
+++ b/package.json
@@ -60,12 +60,14 @@
     "framer-motion": "^10.12.17",
     "hashids": "^2.3.0",
     "install": "^0.13.0",
+    "lucide-react": "^0.474.0",
     "next": "^14.1.3",
     "next-sanity": "^8.3.2",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-email": "^1.9.4",
+    "react-github-calendar": "^4.5.4",
     "react-hook-form": "^7.51.0",
     "react-markdown": "^8.0.7",
     "react-query": "^3.39.3",
