--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mdx-js/loader": "^2.3.0",
     "@neondatabase/serverless": "^0.9.0",
+    "@octokit/graphql": "^8.2.0",
     "@phosphor-icons/react": "^2.1.7",
     "@portabletext/react": "^3.0.11",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -53,6 +54,9 @@
     "@zolplay/react": "^0.5.1",
     "@zolplay/utils": "^1.3.4",
     "cheerio": "1.0.0-rc.12",
+    "clsx": "^2.1.1",
+    "contentlayer": "^0.3.4",
+    "contentlayer2": "^0.5.3",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.1",
@@ -61,6 +65,7 @@
     "hashids": "^2.3.0",
     "install": "^0.13.0",
     "lucide-react": "^0.474.0",
+    "motion": "^12.0.6",
     "next": "^14.1.3",
     "next-sanity": "^8.3.2",
     "next-themes": "^0.2.1",
@@ -70,6 +75,7 @@
     "react-github-calendar": "^4.5.4",
     "react-hook-form": "^7.51.0",
     "react-markdown": "^8.0.7",
+    "react-medium-image-zoom": "^5.2.13",
     "react-query": "^3.39.3",
     "react-rewards": "^2.0.4",
     "react-slick": "^0.30.3",
@@ -84,6 +90,7 @@
     "sanity": "^3.33.0",
     "sanity-plugin-media": "^2.2.5",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^3.0.1",
     "valtio": "^1.13.2",
     "zod": "^3.22.4"
   },
