--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xufei.site",
-  "version": "0.1.1",
+  "version": "20250316",
   "private": true,
   "scripts": {
     "build": "next build",
