--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@zolplay/react": "^0.5.1",
     "@zolplay/utils": "^1.3.4",
     "cheerio": "1.0.0-rc.12",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
     "contentlayer2": "^0.5.3",
@@ -64,6 +65,7 @@
     "framer-motion": "^10.12.17",
     "hashids": "^2.3.0",
     "install": "^0.13.0",
+    "lodash": "4.17.21",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
     "next": "^14.1.3",
