del:up project info

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "rootDir": ".",
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./*"]
+      "~/*": ["./*"],
+      "@/*": ["./*"]  // 根据项目实际路径调整
     }
   },
   "include": [
