--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@octokit/graphql": "^8.2.0",
     "@phosphor-icons/react": "^2.1.7",
     "@portabletext/react": "^3.0.11",
+    "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-select": "^1.2.2",
