--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "motion": "^12.0.6",
     "next": "^14.1.3",
     "next-sanity": "^8.3.2",
+    "next-seo": "^6.8.0",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
@@ -104,7 +105,7 @@
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.26",
     "@types/react": "18.2.65",
-    "@types/react-dom": "^18.2.21",
+    "@types/react-dom": "^18.2.21", 
     "@types/react-syntax-highlighter": "^15.5.11",
     "@types/rss": "^0.0.32",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
